got the desktop navigation to render on screen sizes larger than 767px. created desktop nav component for the desktop view navigation menu

--- a/src/assets/styles/MobileNav.css
+++ b/src/assets/styles/MobileNav.css
@@ -1,8 +1,12 @@
-.navigation {
+.desktop-navigation {
   display: none;
 }
 
 @media (min-width: 767px) {
+  .desktop-navigation {
+    display: inline;
+  }
+
   .navigation {
     display: inline;
     width: 100%;
