added styles for the projects-section container and the for each project section

--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -1,3 +1,15 @@
+.projects-container {
+  display: flex;
+}
+
+.section-container {
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 1px solid #fff;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
 .card {
   width: 18rem;
 }
