added padding to the project cards and to the h1 in the section

--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -10,6 +10,15 @@
   flex-direction: column;
 }
 
+.section-container h1 {
+  margin: 0 auto;
+  color: #fff;
+}
+
+.section-container ol {
+  padding: 1rem;
+}
+
 .card {
   width: 18rem;
 }
