--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -8,6 +8,8 @@
   margin: 1rem;
   display: flex;
   flex-direction: column;
+  min-width: 20rem;
+  max-width: 20rem;
 }
 
 .section-container h1 {
