removed the list numbers for the weather forecast section

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,10 @@
   color: #fff;
 }
 
+.forecast {
+  list-style: none;
+}
+
 .availability-container {
   background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
