added display flex to the card body children and working on debugging the delete project endpoint

--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -28,3 +28,13 @@
 .section-container button {
   color: #fff;
 }
+
+.project-card-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project-card-details p {
+  margin: 0.5rem 0;
+}
