working on resetting the auto incrememnt of ids in sql statement for the projects without restarting the schema.sql file. added classNAme to the div container of the navigation menu and added styles to the nav menu

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
   color: #61dafb;
 }
 
+.site-navigation {
+  margin: 1rem;
+  display: flex;
+  justify-content: end;
+}
+
 .current-weather {
   margin: 0 auto;
 }
