--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,26 @@
-.App {
+/* .App {
   text-align: center;
   padding: 1rem;
 }
 
 .App-container {
-  background-image: url(../src/assets/images/cottage.png);
-  background-repeat: no-repeat;
-  overflow: auto;
-  height: 100vh;
-}
+} */
 
 .App-header {
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-image: url(../src/assets/images/cottage.png); */
+  background-image: url(../src/assets/images/beach_path.jpeg);
+  background-repeat: no-repeat;
+  /* background-color: rgba(0, 0, 0, 0.5); */
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   color: white;
+}
+
+.App-header h1,
+.App-header h2 {
+  text-align: center;
 }
 
 .App-link {
@@ -29,6 +33,7 @@
 
 .current-weather {
   margin: 0 auto;
+  padding: 0;
 }
 
 .weather-container {
@@ -49,4 +54,86 @@
   justify-content: center;
   align-items: center;
   margin: 2rem;
+}
+
+.current-weather ol {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+
+.current-weather ol li:first-child {
+  align-items: center;
+  font-size: 3rem;
+}
+
+.current-weather ol li:nth-child(2) {
+  flex-direction: column !important;
+  align-items: center;
+}
+
+.current-weather ol li:nth-child(3) {
+  flex-direction: column !important;
+  align-items: center;
+}
+
+.current-weather ol li:nth-child(3) img {
+  width: 10rem;
+}
+
+.current-weather ol li:nth-child(4) {
+  flex-direction: column !important;
+  align-items: center;
+}
+
+.current-weather ol li:nth-child(5) {
+  flex-direction: column !important;
+  align-items: center;
+}
+
+.current-weather ol li:last-child {
+  flex-direction: column !important;
+  align-items: center;
+}
+
+@media screen and (min-width: 600px) {
+  .current-weather ol {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .current-weather ol li:first-child {
+    justify-content: center;
+    font-size: 3rem;
+    grid-column: 1 / 7;
+  }
+
+  .current-weather ol li:nth-child(2) {
+    flex-direction: column !important;
+    align-items: center;
+  }
+
+  .current-weather ol li:nth-child(3) {
+    flex-direction: column !important;
+    justify-content: center;
+  }
+
+  .current-weather ol li:nth-child(3) img {
+    width: 10rem;
+  }
+
+  .current-weather ol li:nth-child(4) {
+    flex-direction: column !important;
+    justify-content: center;
+  }
+
+  .current-weather ol li:nth-child(5) {
+    flex-direction: column !important;
+    justify-content: center;
+  }
+
+  .current-weather ol li:last-child {
+    flex-direction: column !important;
+  }
 }
