--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,9 @@
 .current-weather {
   margin: 0 auto;
   padding: 0;
-  border: 5px solid #cfe4f3;
+  border: 10px solid #e2eef8;
   border-radius: 5px;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #656565;
 }
 
 .weather-container {
@@ -108,6 +108,7 @@
 }
 
 .current-weather ol li:nth-child(3) div {
+  display: flex;
   font-size: 5rem;
   line-height: 5rem;
 }
