--- a/src/assets/styles/Hamburger.css
+++ b/src/assets/styles/Hamburger.css
@@ -11,7 +11,7 @@
   width: 2rem;
   height: 0.25rem;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: #f3fffb;
   transform-origin: 1px;
   transition: all 0.3s linear;
 }
