added nav menus - mobile and desktop - to projects component and updated css to align content on page

--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -1,5 +1,14 @@
 .projects-container {
   display: flex;
+  flex-direction: column;
+}
+
+.project-status-container {
+  display: flex;
+  width: 1120px;
+  max-width: 1120px;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 .section-container {
