--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@
   text-align: center;
   padding: 1rem;
 }
-
+*/
 .App-container {
-} */
+  background-image: url("../src/assets/images/beach_path_crop.jpeg");
+    /* background-repeat: no-repeat; */
+} 
 
 .App-header {
   /* background-image: url(../src/assets/images/cottage.png); */
-  background-image: url("../src/assets/images/beach_path.jpeg");
-  background-repeat: no-repeat;
   /* background-color: rgba(0, 0, 0, 0.5); */
   display: flex;
   flex-direction: column;
