updating dev_env branch to match style updates on main branch

--- a/src/App.css
+++ b/src/App.css
@@ -1,198 +1,4 @@
 @font-face {
-  font-family: Beachfly;
+  font-family: "Beachfly";
   src: url("../src/assets/fonts/Beachfly_Free_Trial.otf");
-}
-
-/* .App {
-  text-align: center;
-  padding: 1rem;
-}
-
-.App-container {
-} */
-
-.App-header {
-  /* background-image: url(../src/assets/images/cottage.png); */
-  background-image: url("../src/assets/images/beach_path.jpeg");
-  background-repeat: no-repeat;
-  /* background-color: rgba(0, 0, 0, 0.5); */
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  justify-content: space-between;
-  color: #f3fffb;
-  height: 12rem;
-  background-size: cover;
-}
-
-.App-header h1,
-.App-header h2 {
-  text-align: center;
-}
-
-.App-header h1 {
-  font-family: "Beachfly", serif;
-  font-size: 3.5rem;
-  font-weight: bolder;
-}
-
-.App-header h2 {
-  font-size: 0.75rem;
-  font-weight: bolder;
-}
-
-.App-header h2 {
-  font-size: 12px;
-  font-weight: bolder;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.site-navigation {
-  margin: 1rem;
-}
-
-.current-weather {
-  margin: 0 auto;
-  padding: 0;
-  border: 10px solid #e2eef8;
-  border-radius: 5px;
-  background-color: #656565;
-}
-
-.weather-container {
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 2rem;
-  color: #fff;
-}
-
-.forecast {
-  list-style: none;
-}
-
-.availability-container {
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  height: 70vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 2rem;
-}
-
-.current-weather ol {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.current-weather ol li:first-child {
-  align-items: center;
-  font-size: 2.5rem;
-}
-
-.current-weather ol li:nth-child(2) {
-  flex-direction: column !important;
-  align-items: center;
-  text-transform: uppercase;
-}
-
-.current-weather ol li:nth-child(2) img {
-  width: 7rem;
-}
-
-.current-weather ol li:nth-child(2) p {
-  margin-top: -20px;
-}
-
-.current-weather ol li:nth-child(3) {
-  flex-direction: column !important;
-  align-items: center;
-}
-
-.current-weather ol li:nth-child(3) div {
-  display: flex;
-  font-size: 5rem;
-  line-height: 5rem;
-}
-.current-weather ol li:nth-child(3) div span {
-  font-size: 2rem;
-  margin-top: -20px;
-}
-
-.current-weather ol li:nth-child(3) p {
-  text-transform: uppercase;
-}
-
-.current-weather ol li:nth-child(4) {
-  flex-direction: column !important;
-  align-items: center;
-}
-
-.current-weather ol li:nth-child(4) div {
-  font-size: 5rem;
-  line-height: 5rem;
-}
-
-.current-weather ol li:nth-child(4) p {
-  text-transform: uppercase;
-}
-
-.current-weather ol li:last-child {
-  flex-direction: column !important;
-  align-items: center;
-}
-
-.current-weather ol li:last-child p {
-  text-transform: uppercase;
-}
-
-.current-weather ol li:last-child div {
-  font-size: 5rem;
-  line-height: 5rem;
-}
-.current-weather ol li:last-child div span {
-  font-size: 2rem;
-  margin-top: -20px;
-}
-
-@media screen and (min-width: 600px) {
-  .current-weather ol {
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-  }
-
-  .current-weather ol li:first-child {
-    justify-content: center;
-    font-size: 3rem;
-    grid-column: 1 / 7;
-  }
-
-  .current-weather ol li:nth-child(2) {
-    flex-direction: column !important;
-    align-items: center;
-  }
-
-  .current-weather ol li:nth-child(3) {
-    flex-direction: column !important;
-    justify-content: center;
-  }
-
-  .current-weather ol li:nth-child(3) img {
-    width: 10rem;
-  }
-
-  .current-weather ol li:nth-child(4) {
-    flex-direction: column !important;
-    justify-content: center;
-  }
-
-  .current-weather ol li:last-child {
-    flex-direction: column !important;
-    justify-content: center;
-  }
 }
