trying to get Beachfly font to render on deployed site. added beachfly font as woff and woff2 formats

--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Beachfly";
-  src: url("../fonts/Beachfly_Free_Trial.otf");
+  src: url("../fonts/Beachfly_Free_Trial.woff2");
+  src: url("../fonts/Beachfly_Free_Trial.woff");
 }
 
 .App-container {
