--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Beachfly";
-  src: url("../fonts/Beachfly_Free_Trial.woff2");
-  src: url("../fonts/Beachfly_Free_Trial.woff");
+  src: url("../../assets/fonts/Beachfly.woff");
+  src: url("../../assets/fonts/Beachfly.woff2");
 }
 
 .App-container {
