--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -150,15 +150,43 @@
   }
 
   .desktop-navigation > ul > li {
+    height: 70px;
+    display: flex;
+    align-items: center;
     width: 100%;
     text-align: center;
     z-index: 1;
   }
 
+  .desktop-navigation > ul > li:first-child {
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+  }
+
+  .desktop-navigation > ul > li:nth-child(2) {
+    border-bottom: 1px solid #fff;
+  }
+
+  /* .desktop-navigation > ul > li:nth-child(3) {
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+  } */
+
+  .desktop-navigation > ul > li:last-child {
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+  }
+
   .desktop-navigation > ul > li > a {
+    height: 100%;
+    width: 100%;
+    font-family: "Roboto", sans-serif;
     color: #fff;
     z-index: 1;
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .landing_main-content_right {
