--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -20,6 +20,34 @@
   height: 100vh;
 }
 
+.landing_home-page::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 234, 151, 0.5);
+  z-index: 1;
+}
+
+.landing_main-content_left h1 {
+  font-family: "Beachfly", serif;
+  font-size: 3.5rem;
+  font-weight: bolder;
+  z-index: 1;
+}
+
+.landing_title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  color: white;
+  position: relative;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -73,11 +101,11 @@
     width: 50%;
   }
 
-  .landing_main-content_left h1 {
+  /* .landing_main-content_left h1 {
     font-family: "Beachfly", serif;
     font-size: 3.5rem;
     font-weight: bolder;
-  }
+  } */
 
   .landing_main-content_left h2 {
     font-family: "Roboto", serif;
@@ -85,7 +113,7 @@
     font-weight: 200;
   }
 
-  .landing_title {
+  /* .landing_title {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,28 +121,7 @@
     width: 100%;
     color: white;
     position: relative;
-  }
-  .landing_main-content_left::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    background-color: rgba(255, 234, 151, 0.5);
-    z-index: 1;
-  }
-
-  .landing_main-content_right::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 50%;
-    height: 100%;
-    background-color: rgba(34, 61, 60, 0.5);
-    z-index: 1;
-  }
+  } */
 
   /* .landing_main-content section:first-child {
   margin: 0 auto;
@@ -125,12 +132,12 @@
     width: 50%;
   }
 
-  .landing_main-content_left h1 {
+  /* .landing_main-content_left h1 {
     font-family: "Beachfly", serif;
     font-size: 3.5rem;
     font-weight: bolder;
     z-index: 1;
-  }
+  } */
 
   /* .landing_main-content_left h2 {
     font-family: "Roboto", serif;
