--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -20,7 +20,7 @@
   height: 100vh;
 }
 
-.landing_home-page::before {
+/* .landing_home-page::before {
   content: "";
   position: absolute;
   top: 0;
@@ -28,6 +28,40 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 234, 151, 0.5);
+  z-index: 1;
+} */
+
+.landing_main-content {
+  height: 100%;
+}
+
+.landing_main-content_left {
+  height: 50%;
+}
+
+.landing_main-content_left::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: rgba(255, 234, 151, 0.5);
+  z-index: 1;
+}
+
+.landing_main-content_right {
+  height: 50%;
+}
+
+.landing_main-content_right::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  background-color: rgba(34, 61, 60, 0.5);
   z-index: 1;
 }
 
@@ -62,6 +96,57 @@
   margin: 2rem;
 }
 
+/* Nav Menu (Right Half of the home page on desktop) */
+.desktop-navigation > ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.desktop-navigation > ul > li {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+}
+
+.desktop-navigation > ul > li:first-child {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+
+.desktop-navigation > ul > li:nth-child(2) {
+  border-bottom: 1px solid #fff;
+}
+
+/* .desktop-navigation > ul > li:nth-child(3) {
+    border-top: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+  } */
+
+.desktop-navigation > ul > li:last-child {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+
+.desktop-navigation > ul > li > a {
+  height: 100%;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  z-index: 1;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (min-width: 767px) {
   .landing_main-content {
     display: flex;
@@ -70,27 +155,6 @@
     color: #f3fffb;
     height: 100%;
   }
-  .landing_main-content_left::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    background-color: rgba(255, 234, 151, 0.5);
-    z-index: 1;
-  }
-
-  .landing_main-content_right::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 50%;
-    height: 100%;
-    background-color: rgba(34, 61, 60, 0.5);
-    z-index: 1;
-  }
 
   /* .landing_main-content section:first-child {
   margin: 0 auto;
@@ -98,7 +162,33 @@
 } */
 
   .landing_main-content_left {
+    height: 100%;
     width: 50%;
+    display: flex;
+  }
+
+  .landing_main-content_right {
+    height: 100%;
+    width: 50%;
+    display: flex;
+  }
+
+  .landing_main-content_left::before {
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+  }
+
+  .landing_main-content_right::before {
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+  }
+
+  .site-navigation {
+    width: 100%;
   }
 
   /* .landing_main-content_left h1 {
@@ -107,11 +197,11 @@
     font-weight: bolder;
   } */
 
-  .landing_main-content_left h2 {
+  /* .landing_main-content_left h2 {
     font-family: "Roboto", serif;
     font-size: 1.5rem;
     font-weight: 200;
-  }
+  } */
 
   /* .landing_title {
     display: flex;
@@ -144,57 +234,6 @@
     font-size: 1.5rem;
     font-weight: 200;
   } */
-
-  /* Right Half of the home page */
-  .desktop-navigation > ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    width: 70%;
-    margin: 0 auto;
-  }
-
-  .desktop-navigation > ul > li {
-    height: 70px;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    text-align: center;
-    z-index: 1;
-  }
-
-  .desktop-navigation > ul > li:first-child {
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-  }
-
-  .desktop-navigation > ul > li:nth-child(2) {
-    border-bottom: 1px solid #fff;
-  }
-
-  /* .desktop-navigation > ul > li:nth-child(3) {
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-  } */
-
-  .desktop-navigation > ul > li:last-child {
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-  }
-
-  .desktop-navigation > ul > li > a {
-    height: 100%;
-    width: 100%;
-    font-family: "Roboto", sans-serif;
-    color: #fff;
-    z-index: 1;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
 
   .landing_main-content_right {
     width: 50%;
