--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -36,7 +36,14 @@
 }
 
 .landing_main-content_left {
-  height: 50%;
+  display: flex;
+  height: 60%;
+}
+
+.landing_main-content_right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .landing_main-content_left::before {
@@ -44,24 +51,24 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  height: 60%;
   background-color: rgba(255, 234, 151, 0.5);
   z-index: 1;
 }
 
 .landing_main-content_right {
-  height: 50%;
+  height: 40%;
 }
 
 .landing_main-content_right::before {
   content: "";
   position: absolute;
   top: 0;
-  left: 50%;
-  width: 50%;
-  height: 100%;
-  background-color: rgba(34, 61, 60, 0.5);
+  top: 60%;
+  width: 100%;
+  height: 40%;
+  background-color: rgba(34, 61, 60, 0.75);
   z-index: 1;
 }
 
