working on removing the hamburger nav and have the nav menu on the home page. working on mobile UI

--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -111,7 +111,9 @@
   justify-content: center;
   position: relative;
   width: 70%;
+  max-width: 300px;
   margin: 0 auto;
+  padding: 0;
 }
 
 .desktop-navigation > ul > li {
