--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -130,9 +130,9 @@
   border-bottom: 1px solid #fff;
 }
 
-.desktop-navigation > ul > li:nth-child(2) {
+/* .desktop-navigation > ul > li:nth-child(2) {
   border-bottom: 1px solid #fff;
-}
+} */
 
 /* .desktop-navigation > ul > li:nth-child(3) {
     border-top: 1px solid #fff;
