updated the background image css declaration on home.css in order to reuse the declaration block on the other pages

--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -11,7 +11,7 @@
   background-color: #e5f1f9;
 }
 
-.landing_home-page {
+.universal_background-img {
   background-image: url("../images/cottage.png");
   background-repeat: no-repeat;
   background-size: cover;
