--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -2,14 +2,27 @@
   display: flex;
 }
 
+.projects_main-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 234, 151, 0.5);
+  z-index: 1;
+}
+
 .section-container {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(34, 61, 60, 0.75);
   border: 1px solid #fff;
   margin: 1rem;
   display: flex;
   flex-direction: column;
   min-width: 20rem;
   max-width: 20rem;
+  max-height: 25rem;
+  z-index: 2;
 }
 
 .section-container h1 {
