--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -1,5 +1,20 @@
+.projects_title h1 {
+  font-family: "Beachfly", serif;
+  font-size: 3.5rem;
+  font-weight: bolder;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  color: white;
+  position: relative;
+}
+
 .projects_main-content {
   display: flex;
+  flex-direction: column;
 }
 
 .projects_main-content::before {
@@ -21,7 +36,7 @@
   flex-direction: column;
   min-width: 20rem;
   max-width: 20rem;
-  max-height: 25rem;
+  height: 25rem;
   z-index: 2;
 }
 
