--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -15,6 +15,7 @@
 .projects_main-content {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .projects_main-content::before {
@@ -41,7 +42,8 @@
 }
 
 .section-container h1 {
-  margin: 0 auto;
+  font-family: "Roboto", sans-serif;
+  margin: 1.5rem auto 0 auto;
   color: #fff;
 }
 
