--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: scroll;
 }
 
 .projects_main-content::before {
@@ -32,12 +33,15 @@
 .section-container {
   background-color: rgba(34, 61, 60, 0.75);
   border: 1px solid #fff;
+  padding-bottom: 1rem;
   margin: 1rem;
   display: flex;
   flex-direction: column;
   min-width: 20rem;
   max-width: 20rem;
   height: 25rem;
+  max-height: 25rem;
+  min-height: 25rem;
   z-index: 2;
 }
 
@@ -49,10 +53,12 @@
 
 .section-container ol {
   padding: 1rem;
+  overflow: scroll;
 }
 
 .card {
   width: 18rem;
+  margin-bottom: 1rem;
 }
 
 .section-container button {
