--- a/src/assets/styles/MobileNav.css
+++ b/src/assets/styles/MobileNav.css
@@ -1,10 +1,10 @@
-/*
 .desktop-navigation {
   display: none;
 }
 
 .mobile-navigation {
   background-color: rgba(0, 0, 0, 0.5);
+  display: inline;
 }
 
 .mobile-navigation ul li {
@@ -43,8 +43,8 @@
     padding: 0px 25px;
   }
 
- .mobile-navigation ul li {
+  .mobile-navigation ul li {
     list-style-type: none;
     padding-right: 10px;
-  } 
-} */
+  }
+}
