--- a/src/assets/styles/Hamburger.css
+++ b/src/assets/styles/Hamburger.css
@@ -1,4 +1,4 @@
-/* .hamburger {
+.hamburger {
   width: 2rem;
   height: 2rem;
   display: flex;
@@ -20,4 +20,4 @@
   .hamburger {
     display: none;
   }
-} */
+}
