working on the styling of the nav and landing page for mobile vs desktop. just doing the hamburger nav on internal pages and not the home page

--- a/src/assets/styles/Hamburger.css
+++ b/src/assets/styles/Hamburger.css
@@ -1,4 +1,4 @@
-.hamburger {
+.mobile-nav_hamburger {
   width: 2rem;
   height: 2rem;
   display: flex;
@@ -17,7 +17,7 @@
 }
 
 @media (min-width: 767px) {
-  .hamburger {
+  .mobile-nav_hamburger {
     display: none;
   }
 }
