--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -184,14 +184,17 @@
 
 .landing_footer {
   height: 15%;
+  position: relative;
+  z-index: 3;
+  color: #fff;
 }
 
 .landing_footer::before {
   content: "";
   position: absolute;
-  top: 85%;
+  top: 40%;
   width: 100%;
-  height: 15%;
+  height: 60%;
   background-color: rgba(54, 69, 79, 0.85);
   z-index: 1;
 }
