--- a/src/assets/styles/MobileNav.css
+++ b/src/assets/styles/MobileNav.css
@@ -1,3 +1,7 @@
+.landing_mobile-nav-container {
+  width: 100%;
+}
+
 .mobile-navigation {
   background-color: rgba(0, 0, 0, 0.5);
   display: inline;
