--- a/src/assets/styles/Hamburger.css
+++ b/src/assets/styles/Hamburger.css
@@ -11,9 +11,9 @@
 
 .burger {
   width: 2rem;
-  height: 0.25rem;
+  height: 0.35rem;
   border-radius: 10px;
-  background-color: #f3fffb;
+  background-color: rgba(34, 61, 60, 1);
   transform-origin: 1px;
   transition: all 0.3s linear;
 }
