--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -70,6 +70,10 @@
   color: #fff;
 }
 
+.card-title {
+  margin-bottom: 0;
+}
+
 .project-card-details {
   display: flex;
   justify-content: space-between;
