--- a/src/assets/styles/Hamburger.css
+++ b/src/assets/styles/Hamburger.css
@@ -20,13 +20,32 @@
   cursor: pointer;
 }
 
+#mobile-nav_hamburger {
+  height: 100%;
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 0.75rem;
+  position: relative;
+  z-index: 3;
+  cursor: pointer;
+  max-width: 3rem;
+  align-items: center;
+}
+
+.mobile-nav_hamburger\.open {
+  position: relative;
+  z-index: 3;
+}
+
 .burger,
 #nav-icon3 span {
   width: 2rem;
   height: 0.35rem;
   /* border-radius: 10px; */
   background-color: rgba(34, 61, 60, 1);
-  transform-origin: 1px;
+  transform-origin: 8px;
   /*  transition: all 0.3s linear; */
   display: block;
   position: relative;
@@ -42,40 +61,46 @@
   transition: 0.25s ease-in-out;
 }
 
-.burger:nth-child(1) {
-  top: 0px;
+/* .burger:nth-child(1) {
+  /* top: 0px; 
 }
 
 .burger:nth-child(2),
 .burger:nth-child(3) {
-  top: 18px;
+  /* top: 18px; 
 }
 
 .burger:nth-child(4) {
-  top: 36px;
+  /* top: 36px; 
+} */
+
+.mobile-nav_hamburger.open {
+  position: relative;
+  z-index: 3;
 }
 
-.mobile-nav_hamburger.open div:nth-child(1) {
+.burger.burger1.open {
+  background-color: red !important;
   top: 18px;
   width: 0%;
   left: 50%;
 }
 
-.mobile-nav_hamburger.open div:nth-child(2) {
+.burger.burger2.open {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 
-.mobile-nav_hamburger.open div:nth-child(3) {
+.burger.burger3.open {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 
-.mobile-nav_hamburger.open div:nth-child(4) {
+.burger.burger4.open {
   top: 18px;
   width: 0%;
   left: 50%;
@@ -83,7 +108,7 @@
 
 /* Experimenting with hamburger nav animation */
 
-#nav-icon3 span:nth-child(1) {
+/* #nav-icon3 span:nth-child(1) {
   top: 0px;
 }
 
@@ -120,4 +145,4 @@
   top: 18px;
   width: 0%;
   left: 50%;
-}
+} */
