got the mobile nav menu to toggle when clicking the hamburger menu. had to fix how the props from projectList.js were being passed to hamburger.js and mobilenav.js

--- a/src/assets/styles/MobileNav.css
+++ b/src/assets/styles/MobileNav.css
@@ -3,9 +3,9 @@
   width: 100%;
 }
 
-.mobile-nav_hamburger.open {
+/* .mobile-nav_hamburger.open {
   display: block;
-}
+} */
 
 .mobile-navigation {
   background-color: rgba(34, 61, 60, 0.75);
