--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -129,8 +129,9 @@
   margin: 2rem;
 }
 
-/* Nav Menu (Right Half of the home page on desktop) */
-.desktop-navigation > ul {
+/* Nav Menu (Mobile Desktop: Right Half of the home page, Mobile: middle of viewport ) */
+.desktop-navigation > ul,
+.mobile-navigation > ul {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -142,7 +143,12 @@
   padding: 0;
 }
 
-.desktop-navigation > ul > li {
+.mobile-navigation > ul {
+  height: 100%;
+}
+
+.desktop-navigation > ul > li,
+.mobile-navigation > ul > li {
   height: 70px;
   display: flex;
   align-items: center;
@@ -151,26 +157,29 @@
   z-index: 1;
 }
 
-.desktop-navigation > ul > li:first-child {
+.desktop-navigation > ul > li:first-child,
+.mobile-navigation > ul > li:first-child {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
 }
 
-/* .desktop-navigation > ul > li:nth-child(2) {
+.mobile-navigation > ul > li:nth-child(2) {
   border-bottom: 1px solid #fff;
-} */
+}
 
 /* .desktop-navigation > ul > li:nth-child(3) {
     border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
   } */
 
-.desktop-navigation > ul > li:last-child {
+.desktop-navigation > ul > li:last-child,
+.mobile-navigation > ul > li:last-child {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
 }
 
-.desktop-navigation > ul > li > a {
+.desktop-navigation > ul > li > a,
+.mobile-navigation > ul > li > a {
   height: 100%;
   width: 100%;
   font-family: "Roboto", sans-serif;
