--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -1,4 +1,3 @@
-
 .projects_title h1 {
   font-family: "Beachfly", serif;
   font-size: 3.5rem;
@@ -41,7 +40,7 @@
   width: 1120px;
   max-width: 1120px;
   justify-content: center;
-  margin: 0 auto;s
+  margin: 0 auto;
 }
 
 .section-container {
