--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -1,5 +1,4 @@
 @font-face {
-
   font-family: "Beachfly";
   src: url("../../assets/fonts/Beachfly.woff") format("woff"),
     url("../../assets/fonts/Beachfly.woff2") format("woff2");
@@ -120,7 +119,6 @@
   color: #61dafb;
 }
 
-
 .availability-container {
   background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
@@ -187,6 +185,18 @@
   font-family: "Roboto", sans-serif;
   color: #fff;
   z-index: 1;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.internal_desktop-nav > ul > li > a {
+  height: 45%;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  /* z-index: 1; */
   text-decoration: none;
   display: flex;
   align-items: center;
