--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -1,3 +1,18 @@
+.projects-container {
+  position: relative;
+  width: 100%;
+  /* top: 6%; */
+  /* z-index: 5; */
+  /*
+  display: flex;
+  flex-direction: column;
+  align-items: center; */
+}
+
+/* .projects_title {
+  margin-top: 10%;
+} */
+
 .projects_title h1 {
   font-family: "Beachfly", serif;
   font-size: 3.5rem;
@@ -22,6 +37,10 @@
 .projects-wrapper {
   position: relative;
   z-index: 3;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .projects_main-content::before {
