--- a/src/assets/styles/DesktopNav.css
+++ b/src/assets/styles/DesktopNav.css
@@ -7,7 +7,12 @@
 @media (min-width: 767px) {
   .internal_desktop-nav > ul > li > a:first-child {
     border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
+    /* border-right: 1px solid #fff; */
+  }
+
+  .internal_desktop-nav > ul > li > a:last-child {
+    border-left: 1px solid #fff;
+    /* border-right: 1px solid #fff; */
   }
 
   .internal_desktop-nav > ul > li > a:nth-child(2) {
@@ -18,11 +23,6 @@
     border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
   } */
-
-  .internal_desktop-nav > ul > li > a:last-child {
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
-  }
 
   .internal_desktop-nav {
     display: flex;
