--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -50,7 +50,8 @@
   left: 0;
   width: 100%;
   height: 20%;
-  background-color: rgba(255, 234, 151, 0.5);
+  background: rgba(255, 234, 250, 0.5);
+  /* background-color: rgba(255, 234, 151, 0.5); */
   z-index: 1;
 }
 
