--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -36,7 +36,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 234, 151, 0.5);
+  background-color: rgba(255, 234, 250, 0.5);
+  /* background-color: rgba(255, 234, 151, 0.5); */
   z-index: 1;
 }
 
