--- a/src/assets/styles/Footer.css
+++ b/src/assets/styles/Footer.css
@@ -3,8 +3,9 @@
 .landing_footer {
   z-index: 3;
   color: #fff;
-  width: 100%;
-  background-color: rgba(54, 69, 79, 1);
+  width: 50%;
+  background-color: rgba(34, 61, 60, 0.75);
+  /* background-color: rgba(54, 69, 79, 1); */
   position: absolute;
   bottom: 0px;
   height: 10%;
@@ -16,6 +17,16 @@
 
 .landing_footer h4,
 .landing_footer h5 {
-  font-size: 15px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  /* font-family: "Beachfly", serif; */
+  /* font-family: "Roboto", sans-serif; */
+}
+
+.landing_footer h4 {
+  font-size: 1.5rem;
+}
+
+.landing_footer h5 {
+  font-size: 1rem;
 }
