--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -29,7 +29,7 @@
   align-items: center;
 }
 
-.projects_main-content::before {
+/* .projects_main-content::before {
   content: "";
   position: absolute;
   top: 0;
@@ -37,9 +37,9 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 234, 250, 0.5);
-  /* background-color: rgba(255, 234, 151, 0.5); */
+  background-color: rgba(255, 234, 151, 0.5);
   z-index: 1;
-}
+} */
 
 .project-status-container {
   display: flex;
