updated the text font and weight of the nav text and the project sections headings. adjected the transform-origin for burger3 in the hamburger menu on open. removed the margin top on the projects page heading title

--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
   width: 100%;
   color: white;
   position: relative;
-  margin: 2rem 0;
+  margin: 0rem 0rem 1rem;
 }
 
 .universal_internal-page-container {
