--- a/src/assets/styles/Projects.css
+++ b/src/assets/styles/Projects.css
@@ -65,9 +65,10 @@
 }
 
 .section-container h1 {
-  font-family: "Roboto", sans-serif;
-  margin: 1.5rem auto 0 auto;
+  font-family: "Montserrat", sans-serif;
+  margin: 1.5rem auto 0.75rem auto;
   color: #fff;
+  font-weight: 400;
 }
 
 .section-container ol {
